log
Fri 23 Sep 2022 03:36:23 PM UTC: 
 tests:  1|8
total_score: 0/70
7fea9b3
Fri 23 Sep 2022 03:43:28 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:42:5: error: expected expression before ‘return’
   42 |     return NULL;
      |     ^~~~~~
treemap.c:40:12: error: unused variable ‘newTree’ [-Werror=unused-variable]
   40 |   TreeMap *newTree  = (TreeMap)
      |            ^~~~~~~
treemap.c:43:1: error: control reaches end of non-void function [-Werror=return-type]
   43 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
674b3ce
